@@ -1,0 +1,52 @@
+Troubleshooting the VAS DB2 Plugin.
+
+If login/groups is failing, for either local users once the plug-in is installed, or VAS users, do the following:
+
+Set up syslog:
+Add a auth.notice ( authpriv.notice on linix ) syslog capture. 
+These steps could be used, or it could be done manually (especially if using syslog-ng, as that uses a different configuration format):
+echo -e "auth.notice\t\t/tmp/auth.notice" >> /etc/syslog.conf
+( This adds a line ot the file to capture it to the designated file. The \t should be turned into the tab character, which some OSes require as seperation. If the -e is not accepted by echo, this will have to be manually added to the file.)
+touch /tmp/auth.notice
+kill -HUP `ps -ef| grep syslogd | awk '{print $1}'`
+(Restarts (HUP's) the syslog service so it re-reads the configuration file. )
+
+Set up debug for the plugin:
+The plugin reads the file sys-auth.conf from the instance owner's home directory first, and if that doesn't exist, /etc/sys-auth.conf.
+The setting is 'debug-level = X', with X being a number of 0 to 4. 
+Values:
+0: Things that should log even if logging is turned off ( debug-level = 0 )
+1: Authentication requests only ( Default ).
+2: Error message from failed authentications.
+3: Function calls starting, Debug stuff.
+4: Anything else. ( Very verbose, usually not needed ).
+
+If there is no value, or it is outside that range,  will be treated as a 1. 
+
+To set the debug level for an instance owned by db2inst1 to 3:
+echo "debug-level = 3" >> ~db2inst1/sys-auth.conf
+( The parser will use the first matching line )
+
+This value should be read by the plug-in on a one-minute tick, so restarting the instance is not required to change the debug level. 
+
+At this point, the plug-in should be logging DB activity. This can be verified by tailing the log file.
+tail -f /tmp/auth.notice
+( When someone accesses the database in a way that involves the plugin, it should be logged here ) 
+
+Once verified it is logging, go through the steps to demonstrate the issue being investigated. 
+Make sure to mark the exact time of the failure. If the DB instance is busy, this will help make sure the right section of the log is examined. 
+
+Copy off the log file at that point, and send it into Quest Support with:
+1) Version of the plugin ( should be in the logs )
+2) Explain the steps used to reproduce the issue.
+3) The parts being used, like any 3rd party applications involved. 
+4) DB2 version. 
+5) The user/group involved with the issue.
+6) Time the issue occured.
+7) Any other facts relevent to the issue.
+
+
+If the issue is with getting the plugin to load, firts off make sure you have the latest verion ( @VERSION@ currently ). 
+It fixes some 64-bit issues, where non-AIX were not using the right variable size, leading to some interesting issues. 
+
+For that, gather 1, 2, 3, 4, 6, and 7, and add db2diag logging of the error, with the debug level set to 4. 
